react-and-mongo-testing

--- a/contact.html
+++ b/contact.html
@@ -56,6 +56,8 @@
 
     <div class="jumbotron contact">
         <h1 id="title" class="display-3">Contact Us</h1>
+        <h1 class="display-3" style="visibility: hidden">Contact Us</h1>
+
         <p class="lead standard-text"></p>
         <p class="lead">
             <!--<a class="btn btn-primary btn-lg standard-text" id="learn-button" href="#" role="button">Learn more</a>
