--- a/about.html
+++ b/about.html
@@ -67,18 +67,48 @@
     </div>
     <br>
     <h4 id="lorem">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
-        aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-        occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-    </h4>
-    <br>
-    <h4 id="lorem">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
-        aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-        occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-    </h4>
+            Let's face it: even if you're incredibly determined, staying fit isn't easy.  From cheating on a 
+            diet plan to forgetting to go on a morning run, there are many ways to get sidetracked from your 
+            fitness goals.
+        </h4>
+
+        <br>
+        </br>
+        <br>
+        </br>
+
+        <h4 id="lorem">
+            At Fintess Tracker, we believe in supporting you in your journey towards a healthy lifestyle. 
+            That's why our site provides a simple to use system that will allow you to:
+            <ul>
+
+                <br>
+                </br>
+
+                <li>
+                    Record the number of steps you ran or walked each day
+                </li>
+
+                <br>
+                </br>
+
+                <li>
+                    Record journal entries of how your workout went, and how you feel once it is over
+                </li>
+            
+                <br>
+                </br>
+
+                <li>
+                    View your past entries at your leisure
+                </li>  
+
+            </ul> 
+
+        </h4>
+
+        <br>
+        </br>
     <br>
 
     <!-- Footer -->
